--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -101,3 +101,11 @@
   max-width: 5rem;
   vertical-align: middle;
 }
+
+/* AppointmentDetail Dialog */
+.appointment-detail-image {
+  border-style: none;
+  margin-right: 1rem;
+  height: 8rem;
+  width: 8rem;
+}
