Add Radzen.Blazor and components in ClinicManagement.BlazorClient.Client #17

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/_Imports.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/_Imports.razor
@@ -8,3 +8,5 @@
 @using Microsoft.JSInterop
 @using Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client
 @using Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client.Shared
+@using Radzen
+@using Radzen.Blazor
