Change navigations at current as temporary view pages to work with new ones in ClinicManagement.BlazorClient.Client #17

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/ClientsPage.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/ClientsPage.razor
@@ -1,4 +1,4 @@
-@page "/clients"
+@page "/clients2"
 @using Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client.Shared.Components.IconComponent
 
 <h1>Clients</h1>
