Fix App's name on MainLayout view in ClinicManagement.BlazorClient.Client #17

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/MainLayout.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/MainLayout.razor
@@ -12,7 +12,7 @@
             <div class="row justify-content-start align-items-center">
                 <div class="col-5 d-flex align-items-center">
                     <RadzenSidebarToggle Click="@SidebarToggleClick"></RadzenSidebarToggle>
-                    <RadzenLabel Text="Scheduling" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"></RadzenLabel>
+                    <RadzenLabel Text="Clinic Management" style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;"></RadzenLabel>
                 </div>
 
                 <div class="col-7 d-flex align-items-center justify-content-end">
