Change AppointmentTypes navigation route by convention in ClinicManagement.BlazorClient.Client #17

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/AppointmentTypes/AppointmentTypes.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/AppointmentTypes/AppointmentTypes.razor
@@ -1,4 +1,4 @@
-@page "/appointmenttypes"
+@page "/appointment-types"
 @layout Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client.Shared.MainLayout
 @inherits Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client.Pages.AppointmentTypes.AppointmentTypesComponent
 
