--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/MainLayout.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Shared/MainLayout.razor
@@ -35,7 +35,7 @@
             <RadzenPanelMenu>
                 <ChildContent>
                     <RadzenPanelMenuItem Icon="home" Path="home" Text=@StringLocalizer["MainLayout_Menu_Home"]></RadzenPanelMenuItem>
-                    <RadzenPanelMenuItem Icon="widgets" Path="appointmenttypes" Text=@StringLocalizer["MainLayout_Menu_AppointmentTypes"]></RadzenPanelMenuItem>
+                    <RadzenPanelMenuItem Icon="widgets" Path="appointment-types" Text=@StringLocalizer["MainLayout_Menu_AppointmentTypes"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="people_alt" Path="clients" Text=@StringLocalizer["MainLayout_Menu_Clients"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="store" Path="clinics" Text=@StringLocalizer["MainLayout_Menu_Clinics"]></RadzenPanelMenuItem>
                     <RadzenPanelMenuItem Icon="face" Path="doctors" Text=@StringLocalizer["MainLayout_Menu_Doctors"]></RadzenPanelMenuItem>
