--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Doctors/Doctors.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Doctors/Doctors.razor
@@ -14,7 +14,13 @@
 
 <RadzenCard>
     <div class="row mb-3">
-        <div class="col-12 col-sm-4 col-md-6 col-lg-7 col-xl-8"></div>
+        <div class="col-12 col-sm-4 col-md-6 col-lg-7 col-xl-8">
+            <RadzenButton
+                Click=@OnClickAdd
+                Icon="add"
+                Text=@StringLocalizer["Doctors_Add_Button_Text"]>
+            </RadzenButton>
+        </div>
 
         <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4">
             <div class="datagrid-filter-menu">
@@ -69,6 +75,45 @@
                         TextAlign="TextAlign.Justify"
                         TItem="DoctorDto"
                         Title=@StringLocalizer["Doctors_Grid_Column_Header_FullName"]>
+                    </RadzenDataGridColumn>
+
+                    <RadzenDataGridColumn
+                        Width="160px"
+                        Filterable="false"
+                        Sortable="false"
+                        TextAlign="TextAlign.Right"
+                        TItem="DoctorDto">
+
+                        <Template Context="doctor">
+
+                            <RadzenButton
+                                ButtonStyle="ButtonStyle.Light"
+                                Click="@((args) => OnClickDetail(doctor))"
+                                Icon="find_in_page"
+                                Size="ButtonSize.Medium"
+                                Variant="Variant.Flat">
+                            </RadzenButton>
+
+                            <RadzenButton
+                                ButtonStyle="ButtonStyle.Light"
+                                Class="mx-1"
+                                Click="@((args) => OnClickEdit(doctor))"
+                                Icon="edit"
+                                Size="ButtonSize.Medium"
+                                Variant="Variant.Flat">
+                            </RadzenButton>
+
+                            <RadzenButton
+                                ButtonStyle="ButtonStyle.Danger"
+                                Click="@((args) => OnClickDelete(doctor))"
+                                Icon="delete"
+                                Shade="Shade.Lighter"
+                                Size="ButtonSize.Medium"
+                                Variant="Variant.Flat">
+                            </RadzenButton>
+
+                        </Template>
+
                     </RadzenDataGridColumn>
                 </Columns>
             </RadzenDataGrid>
