--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -89,6 +89,44 @@
   margin-left: 1rem;
 }
 
+/* Patients */
+.patient-card {
+  min-width: 300px;
+}
+
+.patient-card-breaker {
+  background-color: rgba(0, 0, 0, .08);
+  border: none;
+  height: 1px;
+  margin: 1rem 0;
+}
+
+.patient-card-image {
+  border-radius: 50%;
+  margin-right: 1rem;
+  height: 80px;
+  width: 80px;
+}
+
+.patient-card-name {
+  color: var(--rz-text-title-color);
+  font-size: 1rem;
+  font-weight: 700;
+  letter-spacing: -0.02em;
+  line-height: 1.25em;
+  margin-bottom: 0;
+}
+
+.patient-card-sex {
+  color: var(--rz-text-title-color);
+  font-size: .8em;
+}
+
+.patient-card-species {
+  color: var(--rz-text-title-color);
+  font-size: 1em;
+}
+
 .patient-photo-image {
   border-radius: 10%;
   height: 10rem;
