Accept file specified exntesions for PAtient's photos in ClinicManagement.BlazorClient.Client #17

--- a/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Patients/AddEditPatient.razor
+++ b/ClinicManagement/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.ClinicManagement.BlazorClient.Client/Pages/Patients/AddEditPatient.razor
@@ -26,7 +26,7 @@
 
                     <div class="rz-fileupload-buttonbar">
                         <span class="rz-fileupload-choose rz-button rz-secondary" tabindex="0" onkeydown="if(event.keyCode == 32 || event.keyCode == 13){event.preventDefault();this.firstElementChild.click();}">
-                            <InputFile OnChange=@OnChangePhoto />
+                            <InputFile OnChange=@OnChangePhoto accept="@PhotoFileSetting.AllowedExtensions" />
                             <span class="rz-button-text">
                                 @StringLocalizer["AddEditPatient_Photo_Uploader_Button_Text"]
                             </span>
