PatientDetail component page in Scheduling.BlazorClient.Client #19

--- a/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
+++ b/Scheduling/src/Presentation/BlazorClient/Fnunez.VeterinaryClinic.Scheduling.BlazorClient.Client/wwwroot/assets/css/styles.css
@@ -109,3 +109,13 @@
   height: 8rem;
   width: 8rem;
 }
+
+.patient-photo-image {
+  border-radius: 10%;
+  height: 10rem;
+  width: 10rem;
+}
+
+.patient-photo-name {
+  word-wrap: break-word;
+}
